# systemy_rozproszone

./: .gitignore  LICENSE  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/src/: database.py  main.py  todo.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: TodoApp.vue
